[gd_scene load_steps=3 format=3 uid="uid://df6vqkkfvu06d"]

[ext_resource type="Script" uid="uid://cc0lfjg6na8jt" path="res://Battle Systems/Scripts/TurnIcon.gd" id="1_2oksc"]
[ext_resource type="Texture2D" uid="uid://bcaoorxbe5den" path="res://icon.svg" id="2_sb2pp"]

[node name="TurnIcon" type="Panel"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_2oksc")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="ActiveMarker" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -11.5
offset_top = 22.5
offset_right = 11.5
offset_bottom = 45.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_sb2pp")
expand_mode = 1

[connection signal="callNextTurn" from="." to="." method="_on_call_next_turn"]
[connection signal="callTurn" from="." to="." method="_on_call_turn"]
[connection signal="turnFinished" from="." to="." method="_on_turn_finished"]
